@@ -1,6 +1,8 @@
 Revision history for Perl extension FSA::Rules.
 
 0.25
+      - Reverted "circular reference" change from previous release. It wasn't
+        a circular reference after all.
 
 0.24  2006-03-03T00:06:23
       - Added newline to the 'game_over' state in the synopsis. Reported
